azure-aks-nginx-enterprise-01deda/windows-powershell/k8s/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-web-service
  namespace: nginx-dev
spec:
  type: ClusterIP
  selector:
    app: nginx-web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
